--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,25 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.7...3.20)
+
+if(${CMAKE_VERSION} VERSION_LESS 3.12)
+    cmake_policy(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
+endif()
 
 project(HelloThere DESCRIPTION "Hello there!"
                    LANGUAGES CXX)
 
-add_executable(test_suite tests/hello_test.cpp tests/doctest.h hello.hpp)
-target_compile_features(test_suite PUBLIC cxx_std_11)
+if(CMAKE_PROJECT_NAME STREQUAL HelloThere)
+    include(CTest)
+endif()
+
+if(CMAKE_PROJECT_NAME STREQUAL HelloThere AND BUILD_TESTING)
+    add_subdirectory(tests)
+endif()
+
+add_test(NAME AllTests
+         COMMAND hello_test_suite)
+
+add_executable(hello_test_suite tests/hello_test.cpp tests/doctest.h hello.hpp)
+target_compile_features(hello_test_suite PUBLIC cxx_std_11)
 
 add_executable(hello_example examples/hello_example.cpp hello.hpp)
 target_compile_features(test_suite PUBLIC cxx_std_11)
