--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,5 @@ add_executable(hello_test_suite tests/hello_test.cpp tests/doctest.h hello.hpp)
 target_compile_features(hello_test_suite PUBLIC cxx_std_11)
 
 add_executable(hello_example examples/hello_example.cpp hello.hpp)
-target_compile_features(test_suite PUBLIC cxx_std_11)
+target_compile_features(hello_example PUBLIC cxx_std_11)
 
