--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ if(CMAKE_PROJECT_NAME STREQUAL HelloThere AND BUILD_TESTING)
 endif()
 
 add_test(NAME AllTests
-         COMMAND hello_test_suite)
+         COMMAND hello_test)
 
 add_executable(hello_example examples/hello_example.cpp hello.hpp)
 target_compile_features(hello_example PUBLIC cxx_std_11)
