--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(hello_example examples/hello_example.cpp hello.hpp)
+add_executable(hello_example hello_example.cpp ../hello.hpp)
 target_compile_features(hello_example PUBLIC cxx_std_11)
 
