--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,10 @@ if(CMAKE_PROJECT_NAME STREQUAL HelloThere)
     add_subdirectory(examples)
 endif()
 
-add_executable(hello_example examples/hello_example.cpp hello.hpp)
-target_compile_features(hello_example PUBLIC cxx_std_11)
+# The CMake built-in "test" target does not build any test executables.
+# Therefore, as so many others have done, we make our own target
+# "check", which builds any test executables that are not up to date and
+# then runs all tests.
+add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND}
+                        DEPENDS tests/hello_test)
 
