--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,3 +4,10 @@ add_test(NAME AllTests
 add_executable(hello_test hello_test.cpp ../hello.hpp)
 target_compile_features(hello_test PUBLIC cxx_std_11)
 
+# The CMake built-in "test" target does not build any test executables.
+# Therefore, as so many others have done, we make our own target
+# "check", which builds any test executables that are not up to date and
+# then runs all tests. (Alas, it isn't DRY.)
+add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND}
+                        DEPENDS tests/hello_test)
+
