--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
+# Indicate CMake version. Code below follows the recommendation from:
+#   https://cliutils.gitlab.io/modern-cmake/
 cmake_minimum_required(VERSION 3.7...3.20)
-
 if(${CMAKE_VERSION} VERSION_LESS 3.12)
     cmake_policy(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
 endif()
@@ -9,8 +10,8 @@ project(HelloThere DESCRIPTION "Hello there!"
 
 if(CMAKE_PROJECT_NAME STREQUAL HelloThere)
     include(CTest)
-    add_subdirectory(tests)
+    add_subdirectory(test)
 
-    add_subdirectory(examples)
+    add_subdirectory(example)
 endif()
 
