--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_test(NAME AllTests
+add_test(NAME hello_test
          COMMAND hello_test)
 
 add_executable(hello_test hello_test.cpp ../hello.hpp)
@@ -7,7 +7,7 @@ target_compile_features(hello_test PUBLIC cxx_std_11)
 # The CMake built-in "test" target does not build any test executables.
 # Therefore, as so many others have done, we make our own target
 # "check", which builds any test executables that are not up to date and
-# then runs all tests. (Alas, it isn't DRY.)
+# then runs all tests. (Alas, it isn't quite DRY.)
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND}
                         DEPENDS hello_test)
 
