--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,12 @@
 cmake_minimum_required(VERSION 3.20)
 
 project(HelloThere DESCRIPTION "Hello there!"
+                   VERSION 1.0
                    LANGUAGES CXX)
-
-# Do the things we want to do regardless of whether this project is
-# included in some other project.
-
-# (Nothing here)
 
 # Do the things we do NOT want to do if this project is included by some
 # other project.
+
 if(${CMAKE_PROJECT_NAME} STREQUAL HelloThere)
     include(CTest)
     if(${BUILD_TESTING})
@@ -18,4 +15,10 @@ if(${CMAKE_PROJECT_NAME} STREQUAL HelloThere)
 
     add_subdirectory(example)
 endif()
+
+# Do the things we want to do regardless of whether this project is
+# included in some other project.
+
+install(FILES hello.hpp
+        DESTINATION include)
 
