--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,12 @@ project(HelloThere DESCRIPTION "Hello there!"
                    VERSION 1.0
                    LANGUAGES CXX)
 
+# Set our C++ standard if not already set (hopefully to ours or higher)
+
+if(NOT ${CMAKE_CXX_STANDARD})
+    set(CMAKE_CXX_STANDARD 98)
+endif()
+
 # Do the things we do NOT want to do if this project is included by some
 # other project.
 
