--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,10 +1,11 @@
 # Testing library
 FetchContent_Declare(
-    doctest
-    GIT_REPOSITORY https://github.com/onqtam/doctest.git
+    DocTest
+    GIT_REPOSITORY "https://github.com/onqtam/doctest"
     GIT_TAG 2.4.6)
-FetchContent_MakeAvailable(doctest)
-# Adds doctest::doctest
+message(STATUS "Fetching doctest package")
+FetchContent_MakeAvailable(DocTest)
+message(STATUS "Fetching doctest package - done")
 
 add_test(NAME hello_test
          COMMAND hello_test)
@@ -15,10 +16,12 @@ add_test(NAME hello_test2
 list(APPEND TEST_TARGETS hello_test2)
 
 add_executable(hello_test hello_test.cpp)
-target_include_directories(hello_test PRIVATE .. doctest::doctest)
+target_include_directories(hello_test PRIVATE ..)
+target_link_libraries(hello_test PRIVATE doctest)
 
 add_executable(hello_test2 hello_test2.cpp)
-target_include_directories(hello_test PRIVATE .. doctest::doctest)
+target_include_directories(hello_test2 PRIVATE ..)
+target_link_libraries(hello_test2 PRIVATE doctest)
 
 # The CMake "test" target does not build any test executables. We
 # therefore create our own target "check", which builds any test
