--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(HelloThere DESCRIPTION "Hello there!"
-                   VERSION 1.0
-                   LANGUAGES CXX)
+project(HelloThere
+        DESCRIPTION "Hello there!"
+        VERSION 1.0
+        LANGUAGES CXX)
 
 # Set our C++ standard, allowing for override
 
