--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# **********************************************************************
+# C++ .gitignore from GitHub
+# **********************************************************************
+
 # Prerequisites
 *.d
 
@@ -31,9 +35,13 @@
 *.out
 *.app
 
-# Subdirectories (GGC)
+# **********************************************************************
+# Additions
+# **********************************************************************
+
+# Subdirectories
 /build*
 
-# Vim swap files (GGC)
+# Vim swap files
 *.sw?
 
